fix: 활성화된 게시글, 댓글만 조회하도록 메소드 수정